--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
         "illuminate/container": "^6.11",
         "nikic/fast-route": "^1.3",
         "vlucas/phpdotenv": "^4.1",
-        "symfony/http-foundation": "^5.0",
-        "illuminate/support": "^6.11"
+        "symfony/http-foundation": "^5.0"
     },
     "autoload": {
         "psr-4": {
