--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
         "illuminate/container": "^6.11",
         "nikic/fast-route": "^1.3",
         "vlucas/phpdotenv": "^4.1",
-        "symfony/http-foundation": "^5.0"
+        "symfony/http-foundation": "^5.0",
+        "filp/whoops": "^2.7",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
