--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "vlucas/phpdotenv": "^4.1",
         "symfony/http-foundation": "^5.0",
         "filp/whoops": "^2.7",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "illuminate/database": "^6.14"
     },
     "autoload": {
         "psr-4": {
